--- a/index.html
+++ b/index.html
@@ -1,6 +1,49 @@
 <html>
-  <body
-    <h1>Мой первый сайт</h1>
-    <p> круто. </p>
-  </body>
+    <title>Моё кафе</title>
+    <body>
+        <header style="background-color: peru">
+            <h1 style="text-align:center;">Кафе быстрого приготовления "ростикс"<img src="https://i.postimg.cc/76vjw7yL/free-icon-coffee-cup-751621.png" width="50"/></h1>
+        </header>
+        <main>
+            <h2 style="text-align:center;">меню нашего кофе</h2>
+            <p>Наше меню отличается тем что оно очень уневерсальное в не дорогое 
+                <img src="https://i.postimg.cc/W3M6rqqt/28.jpg"/>   
+                <img src="https://i.postimg.cc/h4mPLbG2/29.jpg"/>
+            </p>
+            <table style="border:1px solid deeppink;border-collapse:collapse">
+                <tr style="border:1px solid deeppink;background-color:peru;color:white;">
+                    <td></td>
+                    <td>Название</td>
+                    <td>Цена</td>
+                    <td>Спец. предложение</td>
+                </tr>
+                <tr style="border:1px solid deeppink">
+                    <td style="background-color:lightgreen" rowspan="2">Салаты</td>
+                    <td>Витаминный</td>
+                    <td>170 руб.</td>
+                    <td>—</td>
+                </tr>   
+                <tr style="border:1px solid deeppink;">  
+                    <td>Новогодний</td>
+                    <td>До 08.01 </td>
+                    <td>цена 250 руб.</td>
+                </tr>  
+                <tr style="border:1px solid deeppink;">   
+                    <td style="background-color:plum" rowspan="2">Десерты</td>
+                    <td>Чизкейк</td>
+                    <td>170 руб.</td>
+                    <td rowspan="2">Чашка кофе в подарок!</td>
+                </tr>   
+                <tr style="border:1px solid deeppink;">   
+                    <td>Малиновый тарт</td>
+                    <td>140 руб.</td>
+                </tr>
+            </table>
+        </main>
+        <footer style="background-color: peru">
+            <h2 style="text-align:center;">Мы работаем каждый день с 9:00 до 22:00</h2>
+            <p>Наши котакты</p>
+            <p>Телефон: 7 989 541-73-73</p>
+        </footer>
+    </body>
 </html>
