--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         </header>
         <main>
             <h2 style="text-align:center;">меню нашего кофе</h2>
-            <p>Наше меню отличается тем что оно очень уневерсальное в не дорогое 
+            <p style="text-align:center;">Наше меню отличается тем что оно очень уневерсальное в не дорогое</p>
+            <p style="text-align:center;">
                 <img src="https://i.postimg.cc/W3M6rqqt/28.jpg"/>   
                 <img src="https://i.postimg.cc/h4mPLbG2/29.jpg"/>
             </p>
